[package]
name = "playground"
version = "0.1.0"
authors = ["Isaac Clayton <slightknack@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[dependencies.passerine]
version = "0.9"
path = "../passerine"

[profile.release]
opt-level = "z"
